# maht-net

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  STEP2_COMPLETION_SUMMARY.md  evaluate.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_project.fish  train.py
configs/: baseline_unet.yaml  data_generation.yaml  eval_config.json  maht_net_full.yaml  notebook_test.yaml  train_config.json
data/: .gitkeep
data/splits/: sample_list.json
documentation/: 00_executive_summary.md  01_project_overview.md  02_environment_setup.md  03_dataset_preparation.md  04_architecture_design.md  05_implementation_plan.md  06_training_strategy.md  07_evaluation_framework.md  08_ablation_studies.md  09_troubleshooting_guide.md  10_clinical_integration.md  11_old_implementation_analysis.md  benchmark_datasets.md  data_generation_usage.md  dev.md  global.txt
logs/: .gitkeep
models/: .gitkeep
notebooks/: environment_test.ipynb  step2_data_pipeline.ipynb  test_maht_net_config.ipynb
notebooks/configs/: maht_net_stage1.yaml
old-implementation/: .gitignore  Data Augmentation Image Shift.ipynb  Data Augmentation Labels Shift.ipynb  Display of test images using the model.ipynb  Print Aug Results 2.ipynb  Print Aug Results.ipynb  README.md  Training-model copy.txt  data_augmentation-shift.ipynb  data_augmentation.ipynb  evalaluate_model.sh  evaluate.py  generate_predictions.py  project_env.yml  results of 155 bmp.txt  results-per-landmark.txt  results.txt  train.py
old-implementation/display the dots annotated/: Automated Detection and Analysis for Diagnosis in Cephalometric X-ray Image Using Convolutional Neural Network.ipynb  Automated Detection and Analysis for Diagnosis in Cephalometric X-ray Image Using Convolutional Neural Network.py
old-implementation/logs/test1/ensemble/Ensemble/predictions/: 1.csv
old-implementation/model/: unet_model.py
old-implementation/utilities/: common_utils.py  landmark_utils.py
results/: .gitkeep
scripts/: extract_dataset.py  extract_dataset.sh  generate_training_data.py
scripts/aws/: setup_ec2.sh
scripts/deployment/: deploy.sh
src/: __init__.py
src/config/: __init__.py
src/data/: __init__.py  data_generation.py  dataset.py  isbi_loader.py  preprocess.py
src/evaluation/: __init__.py  benchmark_datasets.py
src/models/: __init__.py  maht_net.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  losses.py  metrics.py  visualization.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
